--- a/index.html
+++ b/index.html
@@ -19,10 +19,19 @@ canvas {
   width: 100%;
   height: 100%;
 }
+h1{
+            color: pink;
+            padding-top: 31%;
+            text-align: center; 
+            font-family: "Rome";
+            position: relative;
+            top:50%;
+          }
   </style>
  </HEAD>
 
  <BODY>
+  <h1 class="chu" > No NO NO NO no<3</i> </h1>
   <canvas id="pinkboard"></canvas>
   <script>
   /*
@@ -213,7 +222,7 @@ var ParticlePool = (function() {
     }
     context.closePath();
     // create the fill
-    context.fillStyle = '#ea80b0';
+    context.fillStyle = '#80eae6';
     context.fill();
     // create the image
     var image = new Image();
